Crash in [@ mozilla::layers::IsCGColorOpaqueBlack]
Categories
(Core :: Graphics, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox-esr102 | --- | unaffected |
firefox102 | --- | unaffected |
firefox103 | --- | unaffected |
firefox104 | + | fixed |
People
(Reporter: mccr8, Assigned: bradwerth)
References
(Regression)
Details
(Keywords: crash, regression, topcrash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/641b2e77-82df-4b65-b7ad-387a30220721
Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
Top 10 frames of crashing thread:
0 XUL mozilla::layers::IsCGColorOpaqueBlack gfx/layers/NativeLayerCA.mm:503
1 XUL mozilla::layers::NativeLayerRootCA::CommitToScreen gfx/layers/NativeLayerCA.mm:317
2 XUL mozilla::wr::RenderCompositorNative::CompositorEndFrame gfx/webrender_bindings/RenderCompositorNative.cpp:267
3 XUL webrender::renderer::Renderer::render_impl gfx/wr/webrender/src/renderer/mod.rs:2198
4 XUL webrender::renderer::Renderer::render gfx/wr/webrender/src/renderer/mod.rs:1737
5 XUL wr_renderer_render gfx/webrender_bindings/src/bindings.rs:620
6 XUL mozilla::wr::RenderThread::UpdateAndRender gfx/webrender_bindings/RenderThread.cpp:560
7 XUL mozilla::wr::RenderThread::HandleFrameOneDoc gfx/webrender_bindings/RenderThread.cpp:410
8 XUL mozilla::detail::RunnableMethodImpl<mozilla::wr::RenderThread*, void xpcom/threads/nsThreadUtils.h:1200
9 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1199
I hit this crash while watching a video on Twitter. I think I had been watching the video in full screen, and I exited full screen when it crashed. I'll see if it happens with another video or I can find the same video again.
Reporter | ||
Comment 1•3 years ago
|
||
It looks like the line we're crashing on was added in bug 1737682. I'll assume this is a regression from that for now.
Reporter | ||
Comment 2•3 years ago
|
||
Looks like there are more people experiencing this crash. I tried messing around with some other videos on Twitter and I couldn't reproduce the issue. I also couldn't find the specific video I was watching before thanks to the feed algorithm I guess.
Reporter | ||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Assignee | ||
Comment 3•3 years ago
|
||
Replication will be tricky because it relies upon the timing of the video telemetry. Seems like this could arise if CGColorGetNumberOfComponents
returns 0
, which it might do if the color is kCGColorClear
. I'll upload a patch.
Assignee | ||
Comment 4•3 years ago
|
||
Updated•3 years ago
|
Assignee | ||
Updated•3 years ago
|
Comment 6•3 years ago
|
||
bugherder |
Description
•