Bug 1780586: Make IsCGColorOpaqueBlack handle clear color correctly. r=gfx-reviewers,jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D152439